working on skewed background

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Raleway&display=swap" rel="stylesheet">
+
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -52,39 +54,56 @@
 
 </header>
 
-  <h3>Stay Productive, Wherever You Are</h3>
+
+<main>
+
+  <div class="features">
+
+    <div class="features__intro">
+
+  <h3>Stay Productive,<br>Wherever You Are</h3>
+
+    </div>
+
+  <img src="img/illustration-features.svg" alt="A phone" class="features__phone">
 
   <h4>All platforms, all devices, all your files</h4>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-  egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
-  leo, ac accumsan magna tellus sed leo.</p>
+      <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+      egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
+      leo, ac accumsan magna tellus sed leo.</p>
 
-    <h4>Real-time collaboration</h4>
+  <h4>Real-time collaboration</h4>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-  egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
-  leo, ac accumsan magna tellus sed leo.</p>
+      <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+      egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
+      leo, ac accumsan magna tellus sed leo.</p>
 
-    <h4>Security you can trust</h4>
+  <h4>Security you can trust</h4>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-  egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
-  leo, ac accumsan magna tellus sed leo.</p>
+      <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+      egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
+      leo, ac accumsan magna tellus sed leo.</p>
 
-    <h4>Automatic backups</h4>
+  <h4>Automatic backups</h4>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-  egestas, elit sit amet fermentum viverra, ipsum dolor vehicula leo,
-  ac accumsan magna tellus sed leo.</p>
+      <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+      egestas, elit sit amet fermentum viverra, ipsum dolor vehicula leo,
+      ac accumsan magna tellus sed leo.</p>
 
-    <h4>Get Early Access Today</h4>
+  <h4>Get Early Access Today</h4>
 
-  <p>It only takes a minute to sign up and our free starter tier is extremely
-  generous. If you have any questions, our support team would be happy to
-  help you.</p>
+      <p class="features__par">It only takes a minute to sign up and our free starter tier is extremely
+      generous. If you have any questions, our support team would be happy to
+      help you.</p>
 
-  <button type="button" name="button">Join</button>
+  <input type="text" name="email" placeholder="email@example.com" class="features__email">
+
+  <button type="button" name="button" class="features__btn">Join</button>
+
+  </div>
+
+</main>
 
   <p>Phone: +1-543-123-4567</p>
   <p>example@fylo.com</p>
