working on footer

--- a/index.html
+++ b/index.html
@@ -105,8 +105,33 @@
 
 </main>
 
-  <p>Phone: +1-543-123-4567</p>
-  <p>example@fylo.com</p>
+<footer>
+
+  <div class="flex-container">
+
+  <img src="img/logo.svg" alt="logo" class="flex-container__img">
+
+<div class="flex-container__telephone">
+
+  <address> <img src="img/icon-phone.svg" alt="telephone"> Phone: +1-543-123-4567</address>
+
+</div>
+
+<div class="flex-container__gmail">
+
+  <address> <img src="img/icon-email.svg" alt="gmail"> example@fylo.com</address>
+
+</div>
+
+  <p>Receive updates from us, including tips and tricks on how to improve your workflow.</p>
+
+<div class="flex-container1">
+
+  <input type="text" name="email" placeholder="email@example.com" class="flex-container1__email">
+
+  <button type="button" name="button" class="flex-container1__button">Join</button>
+
+</div>
 
   <h5>Fylo</h5>
 
@@ -128,9 +153,9 @@
   <p>Terms</p>
   <p>Privacy</p>
 
-  <p>Receive updates from us, including tips and tricks on how to improve your workflow.</p>
+  </div>
 
-  <button type="button" name="button">Join</button>
+</footer>
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
