finished mobile version

--- a/index.html
+++ b/index.html
@@ -133,25 +133,25 @@
 
 </div>
 
-  <h5>Fylo</h5>
+  <h5 class="heading-bottom">Fylo</h5>
 
-  <p>Desktop App</p>
-  <p>Mobile App</p>
-  <p>Pricing</p>
-  <p>Feature</p>
+  <p class="heading-bottom__par-bottom">Desktop App</p>
+  <p class="heading-bottom__par-bottom">Mobile App</p>
+  <p class="heading-bottom__par-bottom">Pricing</p>
+  <p class="heading-bottom__par-bottom">Feature</p>
 
-  <h5>Company</h5>
+  <h5 class="heading-bottom">Company</h5>
 
-  <p>About Us</p>
-  <p>Jobs</p>
-  <p>Press</p>
-  <p>Blog</p>
+  <p class="heading-bottom__par-bottom">About Us</p>
+  <p class="heading-bottom__par-bottom">Jobs</p>
+  <p class="heading-bottom__par-bottom">Press</p>
+  <p class="heading-bottom__par-bottom">Blog</p>
 
-  <h5>Support</h5>
+  <h5 class="heading-bottom">Support</h5>
 
-  <p>Contact Us</p>
-  <p>Terms</p>
-  <p>Privacy</p>
+  <p class="heading-bottom__par-bottom">Contact Us</p>
+  <p class="heading-bottom__par-bottom">Terms</p>
+  <p class="heading-bottom__par-bottom heading-bottom__final">Privacy</p>
 
   </div>
 
