working on desktop version

--- a/index.html
+++ b/index.html
@@ -44,12 +44,19 @@
 
 <div class="main-header">
 
+  <div class="main-header__column1">
+
   <img src="img/illustration-hero.svg" alt="a man with a key" class="main-header__hero">
 
-  <h2 class="main-header__text"> All Your Files In One Secure Location, Accessible <br> Anywhere.</h2>
+  </div>
+
+  <div class="main-header__column2">
+
+  <h2 class="main-header__text"> All Your Files In One Secure Location, Accessible Anywhere.</h2>
 
   <button type="button" name="button" class="main-header__btn">Get Started</button>
 
+  </div>
 </div>
 
 </header>
@@ -61,11 +68,19 @@
 
     <div class="features__intro">
 
-  <h3>Stay Productive,<br>Wherever You Are</h3>
+  <h3>Stay Productive, Wherever You Are</h3>
 
     </div>
 
+<div class="features__flex-container">
+
+<div class="features__flex-container_column1">
+
   <img src="img/illustration-features.svg" alt="A phone" class="features__phone">
+
+</div>
+
+<div class="features__flex-container_column2">
 
   <h4>All platforms, all devices, all your files</h4>
 
@@ -79,6 +94,10 @@
       egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
       leo, ac accumsan magna tellus sed leo.</p>
 
+    </div>
+
+    <div class="features__flex-container_column3">
+
   <h4>Security you can trust</h4>
 
       <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
@@ -90,6 +109,9 @@
       <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
       egestas, elit sit amet fermentum viverra, ipsum dolor vehicula leo,
       ac accumsan magna tellus sed leo.</p>
+   </div>
+
+</div>
 
   <h4>Get Early Access Today</h4>
 
