finished desktop version

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 
 <div class="features__flex-container_column2">
 
-  <h4>All platforms, all devices, all your files</h4>
+  <h4 class="features__h features__h1">All platforms, all devices, all your files</h4>
 
       <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
       egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
       leo, ac accumsan magna tellus sed leo.</p>
 
-  <h4>Real-time collaboration</h4>
+  <h4 class="features__h features__h2">Real-time collaboration</h4>
 
       <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
       egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
@@ -98,13 +98,13 @@
 
     <div class="features__flex-container_column3">
 
-  <h4>Security you can trust</h4>
+  <h4 class="features__h features__h3">Security you can trust</h4>
 
       <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
       egestas, elit sit amet fermentum viverra, ipsum dolor vehicula
       leo, ac accumsan magna tellus sed leo.</p>
 
-  <h4>Automatic backups</h4>
+  <h4 class="features__h features__h4">Automatic backups</h4>
 
       <p class="features__par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
       egestas, elit sit amet fermentum viverra, ipsum dolor vehicula leo,
@@ -113,15 +113,19 @@
 
 </div>
 
-  <h4>Get Early Access Today</h4>
+  <h4 class="get-ready">Get Early Access Today</h4>
 
-      <p class="features__par">It only takes a minute to sign up and our free starter tier is extremely
+      <p class="features__par features__par-final">It only takes a minute to sign up and our free starter tier is extremely
       generous. If you have any questions, our support team would be happy to
       help you.</p>
+
+<div class="access">
 
   <input type="text" name="email" placeholder="email@example.com" class="features__email">
 
   <button type="button" name="button" class="features__btn">Join</button>
+
+</div>
 
   </div>
 
@@ -130,6 +134,8 @@
 <footer>
 
   <div class="flex-container">
+
+<div class="flex-container__column1">
 
   <img src="img/logo.svg" alt="logo" class="flex-container__img">
 
@@ -145,7 +151,11 @@
 
 </div>
 
-  <p>Receive updates from us, including tips and tricks on how to improve your workflow.</p>
+</div>
+
+<div class="flex-container__column2">
+
+  <p class="flex-container__column2__receive">Receive updates from us, including tips and tricks on how to improve your workflow.</p>
 
 <div class="flex-container1">
 
@@ -155,12 +165,20 @@
 
 </div>
 
+</div>
+
+<div class="flex-container__column3">
+
   <h5 class="heading-bottom">Fylo</h5>
 
   <p class="heading-bottom__par-bottom">Desktop App</p>
   <p class="heading-bottom__par-bottom">Mobile App</p>
   <p class="heading-bottom__par-bottom">Pricing</p>
   <p class="heading-bottom__par-bottom">Feature</p>
+
+</div>
+
+<div class="flex-container__column4">
 
   <h5 class="heading-bottom">Company</h5>
 
@@ -169,11 +187,17 @@
   <p class="heading-bottom__par-bottom">Press</p>
   <p class="heading-bottom__par-bottom">Blog</p>
 
+</div>
+
+<div class="flex-container__column5">
+
   <h5 class="heading-bottom">Support</h5>
 
   <p class="heading-bottom__par-bottom">Contact Us</p>
   <p class="heading-bottom__par-bottom">Terms</p>
   <p class="heading-bottom__par-bottom heading-bottom__final">Privacy</p>
+
+</div>
 
   </div>
 
