fixed minor things

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <div class="flex-container__column3">
 
-  <h5 class="heading-bottom">Fylo</h5>
+  <h5 class="heading-bottom heading-bottom-initial">Fylo</h5>
 
   <p class="heading-bottom__par-bottom">Desktop App</p>
   <p class="heading-bottom__par-bottom">Mobile App</p>
