trying to fix a bug (join button on Safari)

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 </div>
 
-  <h4 class="get-ready">Get Early Access Today (up)</h4>
+  <h4 class="get-ready">Get Early Access Today</h4>
 
       <p class="features__par features__par-final">It only takes a minute to sign up and our free starter tier is extremely
       generous. If you have any questions, our support team would be happy to
